      http://darcs.d.o/~foo/bar/baz against user foo
    + Ignore a repository owner mismatch in "print mode"
    + In authenticated mode, ensure that a checked-out personal git.d.o
      respository will be writable by the user passed on the command line
      (Closes: #447791)
  * debcommit: Strip epochs from hg tags (Closes: #473593)
  * dget: Pass --all-versions to apt-cache show in case the user has
    configured it to only show the candidate version. Thanks Håkon Stordahl
    (Closes: #472747)
  * dscverify:
    + Add debian-maintainers to the default set of keyrings
    + Add a --no-default-keyrings option to override the default keyrings
  * tagpending: Allow the mail sent to the BTS to be displayed and (assuming
    --noact is not in effect) confirmed before sending
  * who-uploads: Mention the debian-maintainers keyring in --help
  * README, debian/control: Add libsasl-authen-perl to Suggests and the
    description of bts, to support SMTP authentication

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Tue, 25 Mar 2008 18:51:59 +0000

devscripts (2.10.20) unstable; urgency=low

  * bts:
    + Only append a single ellipsis to the mail subject once it becomes
      too long, rather than for each extra command (Closes: #471304)
    + Make --no-action and --(force-)interactive work if neither DEBEMAIL
      nor EMAIL are set (Closes: #467066)
    + Add --cc-addr to --help output
  * checkbashisms:
    + Make --version actually produce version information
    + Fix explanation of VAR+=foo
    + Fix an error in the "shell script wrapper" detection
    + Enhance the "invalid function name" check to allow a leading bracket
      before the function name
    + Don't treat '' at the beginning of a line as the start of a quoted block
    + Allow a heredoc marker to begin with a backslash
    + Enhance quoted block detection to handle escaped quotes better
    + Enhance "shell script wrapper" detection to catch more ways of
      disguising a non shell script as one