@@ -217,6 +217,9 @@
 # 
 # Option to pass to wdiff
 # DEBDIFF_WDIFF_OPT=
+#
+# Include the output of diffstat?
+# DEBDIFF_SHOW_DIFFSTAT=no
 
 ##### debi
 # 
