@@ -28,6 +28,7 @@ devscripts (2.10.21) UNRELEASED; urgency=low
       respository will be writable by the user passed on the command line
       (Closes: #447791)
   * debcommit: Strip epochs from hg tags (Closes: #473593)
+  * debdiff: Add a --diffstat option (Closes: #370286)
   * dget: Pass --all-versions to apt-cache show in case the user has
     configured it to only show the candidate version. Thanks Håkon Stordahl
     (Closes: #472747)
